[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] } # 通过派生宏给结构体等提供序列化特性
# bincode = "1.2.1" # 提供序列化与反序列化功能
# rust-crypto = "0.2.36" # 提供各种加密算法功能
chrono = "0.4.19"
myutils = { path = "../myutils" }